// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Element applies left modifier 1`] = `
<span
  aria-hidden={true}
  className="fa fa-home sc-jzJRlG gdZFdo sc-gZMcBi hbkhKP"
/>
`;

exports[`Icon Element applies right modifier 1`] = `
<span
  aria-hidden={true}
  className="fa fa-home sc-jzJRlG pGamY sc-gZMcBi hbkhKP"
/>
`;

exports[`Icon Element renders correctly 1`] = `
<span
  aria-hidden={true}
  className="fa fa-home sc-jzJRlG idGKfE sc-gZMcBi hbkhKP"
/>
`;
